# pico_IHM

./: README.md
pico_RX/: CMakeLists.txt  core1_display.c  main.c  main_shared.h
pico_RX/libdvi/: tmds_encode.S
pico_TX/: CMakeLists.txt  main.c
